@@ -1,3 +1,5 @@
+* fix incorrect pattern handling in config files #310 [Miklos Fazekas]
+
 === 3.1.0.beta1
 
 * trying to execute something on a not yet opend channel throws nicer messag [Miklos Fazekas]
